--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -32,7 +28,9 @@
                             <input type="text"><br>
                             <table>
                                 <tr>
-                                    <td><input type="checkbox"><form>Do you want to sign up to the newsletter?</form></td>
+                                    <td>
+                                        <input type="checkbox"><form>Do you want to sign up to the newsletter?</form>
+                                    </td>
                                 </tr>
                             </table>
                             <input type="submit">
