--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
@@ -10,11 +6,11 @@
         <title>CV: Norbert BAKK</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         
-        <hr size="6">
+        <hr>
         <table cellspacing="5">
             <thead></thead>
             <tbody>
@@ -30,7 +26,7 @@
             <tfoot></tfoot>
         </table>
         
-        <hr size="5">
+        <hr>
         <h3>Book Recommendations</h3>
         <table>
             <thead></thead>
@@ -62,7 +58,7 @@
             <tfoot></tfoot>
         </table>
 
-        <hr size="4">
+        <hr>
         <h3>Work Experience</h3>
         <table cellspacing="6">
             <thead>
@@ -81,14 +77,14 @@
                     <td>Junior Process Engineer</td>
                 </tr>
                 <tr>
-                    <td>2021-</td>
+                    <td>2021-present</td>
                     <td>FES&P Engineer</td>
                 </tr>
             </tbody>
             <tfoot></tfoot>
         </table>
 
-        <hr size="3">
+        <hr>
         <h3>Skills</h3>
         <table cellspacing="10">
             <thead></thead>
@@ -113,7 +109,7 @@
             <tfoot></tfoot>
         </table>
 
-        <hr size="2">
+        <hr>
         <p><a href="contact.html">Contact me</a></p>
 
     </body>
